--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -8,15 +8,17 @@
 // BASIC ELEMENTS
 ////////////////////////////////////////////////////////////////////////////////////
 
+    :focus {
+      outline: none;
+    }
+
     body {
-    	background: #FFF;
-    	font-family: @font1;
-    	letter-spacing: 0.05em;
-    	font-size: 20px;
-    	line-height: 1.6;
-        font-weight: @font-weight;
-    	color: #000;
-        .font-size-body;
+        background: #FFF;
+        letter-spacing: 0.05em;
+        font-size: 20px;
+        line-height: 1.6;
+        color: #000;
+        .font-size-responsive(14px, 14px, 14px, 16px, 16px, 16px, 18px, 18px);
     }
 
     strong, b {
@@ -24,10 +26,10 @@
     }
 
     a {
-    	color: @color-link;
-    	text-decoration: none;
-    	outline: 0 !important;
-    	-webkit-transition: all .3s ease-in-out;
+        color: @color-link;
+        text-decoration: none;
+        outline: 0 !important;
+        -webkit-transition: all .3s ease-in-out;
         -moz-transition: all .3s ease-in-out;
         -ms-transition: all .3s ease-in-out;  
         -o-transition: all .3s ease-in-out;  
@@ -43,93 +45,16 @@
         margin: 0;
         padding: 0;
         line-height: 1;
-        font-weight: 700;
-        font-family: @font1;
+        text-transform: uppercase;
     }
 
     h1, h2 {
-        .font-size-responsive(20px, 20px, 40px, 40px, 60px, 60px, 80px, 80px);
-        line-height: 1.2em;
+        .font-size-responsive(34px, 36px, 38px, 40px, 42px, 44px, 48px, 48px);
     }
 
-    .bullets {
-        li {
-            position: relative;
-            padding: 0 0 10px 20px;
-
-            &:before {
-                position: absolute;
-                left: 0;
-                top: 0;
-                font-family: 'FontAwesome';
-                content: "\f105";
-                color: #000;
-            }
-        }
+    h3, h4, h5, h6 {
+        .font-size-responsive(22px, 22px, 24px, 24px, 24px, 24px, 26px, 26px);
     }
-    
-    //////////////////////////////
-    // FORM STYLES
-    //////////////////////////////
-
-        label {
-            color: rgba(0,0,0,.3);
-        }
-
-        input[type='text'], input[type='email'], input[type='password'], input[type='number'], input[type='tel'], input[type='date'], input[type="url"], textarea, select {
-            border: 0;
-            border-bottom: 1px solid rgba(0,0,0,.3);
-            padding: 10px 0;
-            height: 50px;
-            background: transparent;
-        }
-
-        .custom-upload-btn {
-            overflow: hidden;
-            padding: 8px 15px;
-            margin: 2px;
-            background: #FFF;
-            border: 1px solid #000;
-            color: #000;
-            display: inline-block;
-            font-size: 18px;
-            text-transform: uppercase;
-            font-weight: 400;
-
-            br {
-                display: none;
-            }
-
-            input[type="file"] {
-                position: fixed;
-                opacity: 0;
-                top: 0;
-            }
-
-            &:hover {
-                background: #000;
-                color: #FFF;
-            }
-
-            &:active {
-                background: #CCF;
-            }
-
-            // input:invalid + span, // GREAT SOLUTION, BUT NOT WORKING AS THROUGH CF7 WRAPPER NOT SAME LEVEL IN DOM
-            &.invalid {
-                color: #A44;
-            }
-
-            &.selected {
-                color: #FFF !important; 
-                background: #000;
-
-                &:after {
-                    content: "\f00c";
-                    font-family: FontAwesome;
-                }
-            }
-        }
 
 ////////////////////////////////////////////////////////////////////////////////////
 // HEADER
