--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -2,3 +2,34 @@ body.woocommerce #em-wc-container,
 body.woocommerce-page #em-wc-container {
   width: 1200px;
 }
+body.single-product .custom-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  z-index: -10;
+}
+body.single-product .custom-background:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/bali-background.svg");
+  background-size: contain;
+  z-index: -5;
+}
+body.single-product .custom-background:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: url("../img/bali-background-2.png");
+  background-size: contain;
+  background-repeat: repeat-x;
+  z-index: -2;
+}
