--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -9,14 +9,14 @@
 // 9)  SEARCH
 // 10) QUICKVIEW
 
-//////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////
 // 1) IMPORTS
 /////////////////////////////////////////////////////////////////////////////////
 
     @import (reference) '../../../../../Eichmeister/assets/css/mixins.less';
     @import (reference) '../../../../../Eichmeister/assets/css/lib/flexgrid.less';
 
-//////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////
 // 2) GENERAL WOOCOMMERCE OVERRIDES
 /////////////////////////////////////////////////////////////////////////////////
 
@@ -24,5 +24,45 @@
 	body.woocommerce-page {
 		#em-wc-container {
 			width: 1200px;
+		}
+	}
+
+/////////////////////////////////////////////////////////////////////////////////
+// 3)  SINGLE PRODUCT
+/////////////////////////////////////////////////////////////////////////////////
+
+	body.single-product {
+		.custom-background {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 80vh;
+			z-index: -10;
+
+			&:before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+  				background-image: url("../img/bali-background.svg");
+  				background-size: contain;
+  				z-index: -5;
+			}
+
+			&:after {
+				content: "";
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: 100px;
+  				background-image: url("../img/bali-background-2.png");
+  				background-size: contain;
+  				background-repeat: repeat-x;
+  				z-index: -2;
+			}
 		}
 	}
