--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -1,13 +1,12 @@
-body.woocommerce #em-wc-container,
-body.woocommerce-page #em-wc-container {
-  width: 1200px;
+body.single-product .product {
+  position: relative;
 }
 body.single-product .custom-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 80vh;
+  height: 100%;
   z-index: -10;
 }
 body.single-product .custom-background:before {
@@ -45,4 +44,107 @@ body.single-product #em-wc-container table.variations select {
 }
 body.single-product .woocommerce-product-gallery__trigger {
   display: none;
+}
+body.single-product #custom-taxonomies {
+  position: relative;
+  background-image: url("../img/bali-background-4.jpg");
+  background-size: cover;
+  background-repeat: repeat-x;
+}
+body.single-product #custom-taxonomies:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: url("../img/bali-background-2.png");
+  background-size: contain;
+  background-repeat: repeat-x;
+  z-index: 1;
+}
+body.single-product #custom-taxonomies:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+  z-index: 1;
+}
+body.single-product #custom-taxonomies .custom-taxonomies-image {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 200px;
+  background-image: url("../img/bali-background-3.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+body.single-product #custom-taxonomies .region .region-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 80%;
+  z-index: 10;
+}
+body.single-product #custom-taxonomies .region .region-background:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/bali-background.svg");
+  background-size: contain;
+}
+body.single-product #custom-taxonomies .region img {
+  position: relative;
+  top: 10%;
+  left: 20%;
+  width: auto;
+  height: 80%;
+  z-index: 20;
+}
+body.single-product #custom-taxonomies .flavor .flavor-background {
+  position: absolute;
+  top: 10%;
+  right: 0;
+  width: 80%;
+  height: 80%;
+  z-index: 10;
+}
+body.single-product #custom-taxonomies .flavor .flavor-background:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/bali-background.svg");
+  background-size: contain;
+}
+body.single-product #custom-taxonomies .flavor img {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: auto;
+  height: 80%;
+  z-index: 20;
+}
+body.single-product #custom-taxonomies .content {
+  align-self: center;
+}
+@media all and (min-width: 769px) {
+  body.single-product #custom-taxonomies .order-1 {
+    order: 1;
+  }
+  body.single-product #custom-taxonomies .order-2 {
+    order: 2;
+  }
 }
