--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -29,12 +29,11 @@
 /////////////////////////////////////////////////////////////////////////////////
 
 	body.single-product {
-		// Custom Mybali Background by taxonomies
-
 		.product {
 			position: relative;
 		}
 
+		/******** summary background ********/
 		.custom-background {
 			position: absolute;
 			top: 0;
@@ -51,7 +50,8 @@
 				width: 100%;
 				height: 100%;
   				background-image: url("../img/bali-background.svg");
-  				background-size: contain;
+  				background-size: cover;
+  				background-repeat: repeat;
   				z-index: -5;
 			}
 
@@ -69,7 +69,22 @@
 			}
 		}
 
+		/******** Product summary ********/
+		.summary {
+			color: @white;
+		}
+
+		/******** Product Attributes ********/
 		#em-wc-container {
+
+			.woocommerce-breadcrumb {
+				color: @white;
+
+				a {
+					color: @white;
+				}
+			}
+
 			table.variations {
 				margin-bottom: 40px;
 
@@ -84,13 +99,24 @@
 					border-bottom: 1px solid #fff;
 				}
 			}
+
+			.single_variation_wrap {
+				input.qty {
+					width: 60px;
+					background-color: transparent;
+					border: 1px solid @white;
+					color: @white;
+					padding: 13px 10px;
+				}
+			}
 		}
 
-		// product gallery
+		/******** Product Gallery ********/
 		.woocommerce-product-gallery__trigger {
 			display: none;
 		}
 
+		/******** Taxonomies layout ********/
 		#custom-taxonomies {
 			position: relative;
   			background-image: url("../img/bali-background-4.jpg");
@@ -137,10 +163,10 @@
 			.region {
 				.region-background {
 					position: absolute;
-					top: 0;
-					left: 0;
-					width: 80%;
-					height: 80%;
+					top: -20%;
+					left: -10%;
+					width: 100%;
+					height: 100%;
 					z-index: 10;
 
 					&:before {
@@ -151,17 +177,18 @@
 						width: 100%;
 						height: 100%;
 		  				background-image: url("../img/bali-background.svg");
-		  				background-size: contain;
+		  				background-size: cover;
+		  				background-repeat: repeat;
 					}
 				}
 
 				img {
 
 					position: relative;
-					top: 10%;
+					top: 0%;
 					left: 20%;
-					width: auto;
-					height: 80%;
+					width: 80%;
+					height: auto;
 					z-index: 20;
 				}
 			}
@@ -170,9 +197,9 @@
 				.flavor-background {
 					position: absolute;
 					top: 10%;
-					right: 0;
-					width: 80%;
-					height: 80%;
+					left: 10%;
+					width: 100%;
+					height: 100%;
 					z-index: 10;
 
 					&:before {
@@ -183,7 +210,8 @@
 						width: 100%;
 						height: 100%;
 		  				background-image: url("../img/bali-background.svg");
-		  				background-size: contain;
+		  				background-size: cover;
+		  				background-repeat: repeat;
 					}
 				}
 
@@ -192,8 +220,8 @@
 					position: relative;
 					top: 0;
 					left: 0;
-					width: auto;
-					height: 80%;
+					width: 80%;
+					height: auto;
 					z-index: 20;
 				}
 			}
