--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -8,6 +8,7 @@
 // 8)  THANK YOU PAGE
 // 9)  SEARCH
 // 10) QUICKVIEW
+// 11) PRODUCT TILE
 
 /////////////////////////////////////////////////////////////////////////////////
 // 1) IMPORTS
@@ -50,7 +51,7 @@
 				width: 100%;
 				height: 100%;
   				background-image: url("../img/bali-background.svg");
-  				background-size: cover;
+  				background-size: contain;
   				background-repeat: repeat;
   				z-index: -5;
 			}
@@ -148,16 +149,17 @@
 			}
 
 			.custom-taxonomies-image {
-				content: "";
-				position: absolute;
-				top: 0;
-				right: 0;
-				width: 300px;
-				height: 200px;
-  				background-image: url("../img/bali-background-3.svg");
-  				background-size: contain;
-  				background-repeat: no-repeat;
-  				z-index: 2;
+				@media all and (min-width: @breakpoint3_mf) {
+					position: absolute;
+					top: 0;
+					right: 0;
+					width: 300px;
+					height: 200px;
+	  				background-image: url("../img/bali-background-3.svg");
+	  				background-size: contain;
+	  				background-repeat: no-repeat;
+	  				z-index: 2;
+	  			}
 			}
 
 			.region {
@@ -177,7 +179,7 @@
 						width: 100%;
 						height: 100%;
 		  				background-image: url("../img/bali-background.svg");
-		  				background-size: cover;
+		  				background-size: contain;
 		  				background-repeat: repeat;
 					}
 				}
@@ -196,7 +198,7 @@
 			.flavor {
 				.flavor-background {
 					position: absolute;
-					top: 10%;
+					top: 0;
 					left: 10%;
 					width: 100%;
 					height: 100%;
@@ -210,7 +212,7 @@
 						width: 100%;
 						height: 100%;
 		  				background-image: url("../img/bali-background.svg");
-		  				background-size: cover;
+		  				background-size: contain;
 		  				background-repeat: repeat;
 					}
 				}
@@ -218,8 +220,8 @@
 				img {
 
 					position: relative;
-					top: 0;
-					left: 0;
+					top: -10%;
+					left: 0%;
 					width: 80%;
 					height: auto;
 					z-index: 20;
@@ -238,6 +240,63 @@
 				.order-2 {
 					order: 2;
 				}
+			}
+		}
+	}
+
+/////////////////////////////////////////////////////////////////////////////////
+// 11) PRODUCT TILE
+/////////////////////////////////////////////////////////////////////////////////
+
+	.em-product-tile-4 {
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-image: url("../img/bali-background.svg");
+			background-size: contain;
+			background-repeat: repeat;
+		}
+
+		.flavor,
+		.region {
+			text-align: center;
+			color: @white;
+			display: block;
+		}
+
+		.title {
+			font-size: 2em;
+			text-align: center;
+			color: @white;
+			display: block;
+		}
+
+		.description {
+			position: relative;
+		}
+
+		.more-information {
+			position: absolute;
+			top: 200%;
+			left: 50%;
+			transform: translate( -50%, 0 );
+			width: fit-content;
+			-webkit-transition: all .4s ease;
+			transition: all .4s ease;
+		}
+
+		&:hover {
+			.wrapper {
+				opacity: 0;
+			}
+
+			.more-information {
+				top: 50%;
+				transform: translate( -50% , -50% );
 			}
 		}
 	}
